syntax = "proto3";

package exchange;

import "google/protobuf/timestamp.proto";

enum TradingPair {
  TRADING_PAIR_UNKNOWN = 0;
  BTC_USD = 1;
  BTC_THB = 2;
}

message OrderItem {
  enum Type {
	TYPE_UNKNOWN = 0;
	MARKET = 1;
	LIMIT = 2;
	CANCEL = 3;
  }
  enum Position {
	POSITION_UNKNOWN = 0;
	BID = 1;
	ASK = 2;
  }
  string order_id = 1;
  google.protobuf.Timestamp timestamp = 2;
  Type type = 4;
  Position position = 5;
  double value = 6;
}
